syntax = "proto3";

package auth_service;
option go_package = "/proto/auth_gate;auth_service";

service AuthGate {
    rpc CheckAuthorization(AuthCheckRequest) returns (AuthCheckResponse);
}

message AuthCheckRequest {
    string jwtToken = 1;
}

message AuthCheckResponse {
    bool status = 1;
    string username = 2;
}

