syntax = "proto3";

package gate;
option go_package = "/proto/gate;gate";

service Gate {
    rpc GetAuthorization(AuthRequest) returns (TaskResponse);
    rpc Register(RegisterRequest) returns (TaskResponse);
    rpc GetNotes(NoteRequest) returns (TaskResponse);
    rpc GetTaskStatus(TaskRequest) returns (TaskResponse);
    rpc CreateNote(Note) returns (TaskResponse);
}

message AuthRequest {
    string login = 1;
    string passhash = 2;
}

message RegisterRequest {
    string login = 1;
    string passhash = 2;
}

message TaskRequest {
    string taskid = 1;
}

message TaskResponse {
    string status = 1;
    string info = 2;
    oneof data {
        NoteResponse noteResponse = 3;
    }
}

message NoteRequest {
    uint64 offset = 1;
    uint64 count = 2;
    uint64 id = 3;
}

message NoteResponse {
    repeated Note note = 1;
}

message Note {
    string id = 1;
    string title = 2;
    string content = 3;
    string created_at = 4;
    string updated_at = 5;
}